library/pod-security-policy/seccomp/samples/psp-seccomp/disallowed_ephemeral.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-seccomp-disallowed
  namespace: default
  annotations:
    container.seccomp.security.alpha.kubernetes.io/nginx: unconfined
  labels:
    app: nginx-seccomp
spec:
  ephemeralContainers:
  - name: nginx
    image: nginx
